# agent_tester

./: .env.example  .gitignore  CLAUDE.md  E2E_REPORT.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: metric-analyzer.md  report-writer.md  scenario-generator.md
.github/workflows/: claude.yml  regression.yml
baskets/finance_agent/: SCN-FIN-001.yaml  SCN-FIN-002.yaml  SCN-FIN-003.yaml  SCN-FIN-004.yaml  SCN-FIN-005.yaml  SCN-FIN-006.yaml  SCN-FIN-007.yaml  SCN-FIN-008.yaml  SCN-FIN-009.yaml  SCN-FIN-010.yaml  SCN-FIN-011.yaml  SCN-FIN-012.yaml  SCN-FIN-014.yaml  SCN-FIN-015.yaml  SCN-FIN-016.yaml  SCN-FIN-017.yaml  SCN-FIN-018.yaml  SCN-FIN-019.yaml  SCN-FIN-020.yaml  SCN-FIN-021.yaml  SCN-FIN-022.yaml  SCN-FIN-023.yaml  SCN-FIN-024.yaml
baskets/travel_agent/: SCN-TRV-002.yaml  SCN-TRV-003.yaml  SCN-TRV-004.yaml  SCN-TRV-005.yaml  SCN-TRV-006.yaml  SCN-TRV-007.yaml  SCN-TRV-008.yaml  SCN-TRV-009.yaml  SCN-TRV-010.yaml  SCN-TRV-011.yaml  SCN-TRV-012.yaml  SCN-TRV-013.yaml  SCN-TRV-014.yaml  SCN-TRV-015.yaml  SCN-TRV-016.yaml  SCN-TRV-017.yaml  SCN-TRV-018.yaml  SCN-TRV-019.yaml  SCN-TRV-020.yaml  SCN-TRV-021.yaml  SCN-TRV-022.yaml
dashboard/: app.py  data_loader.py
dashboard/views/: heatmap.py  pareto.py  scenario.py  summary.py  trends.py  versions.py
data/: destinations.csv  generate_destinations.py  generate_transactions.py  transactions.csv
docs/specs/: 00-overview.md  01-tester-architecture.md  02-scenario-format.md  03-metrics.md  04-judge.md  05-gate-logic.md  06-reporter.md  08-cli.md  (+3 more)
examples/: README.md  run_finance_v2.html  run_travel_v2.html  scenario_finance_negative.yaml  scenario_travel_multiturn.yaml
tester/: cli.py  evolution.py  executor.py  gate.py  judge.py  loader.py  metrics.py  models.py  orchestrator.py  reporter.py
tests/: conftest.py  test_cli.py  test_dashboard_loader.py  test_evolution.py  test_executor.py  test_gate.py  test_imports.py  test_judge.py  test_loader.py  test_metrics.py  test_models.py  test_orchestrator.py  test_reporter.py
(+37 files in other folders)
